deploy/k8s/workload/research-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: research-portal
  namespace: research
  labels:
    app.kubernetes.io/name: research-portal
    app.kubernetes.io/part-of: research-fabric-lab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: research-portal
  ports:
    - name: http
      port: 80
      targetPort: 8501
